--- a/index.html
+++ b/index.html
@@ -1,108 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>E-commerce</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6f0ad5579e.js" crossorigin="anonymous"></script>
-    <title>Document</title>
 </head>
-
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark backgroundColor">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <p>Nube de Papel <a href="http://index.html"></a></p>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                    </div>
-                    <div>
-                        <a class="btn-carrito">
-                            <i id="carrito" class="fas fa-shopping-cart"></i>
-                            <span class="cantidad-carrito">0</span>
-                        </a>
-                    </div>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid navegador" >
+          <a class="navbar-brand" href="#">Nube de Papel</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sobre mi</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Como comprar</a>
+              </li>
+              <li class="nav-item">
+                <button class="nav-link text-body"  id="open" href="#"><i class="fa-solid fa-cart-shopping"></i> <span id="counter"></span></a>
+                  <div>
+                    <a class="btn-carrito"></a>
+                        <span class="cantidad-carrito">0</span>
+                    </a>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <!-- CART MODAL -->
-        <div class="cart-modal-overlay">
-            <div class="cart-modal">
-                <i id="cerrar-btn" class="fas fa-times"></i>
-                <h1 class="carrito-vacio">El carrito esta vacio</h1>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <main id="product-container">
 
-                <div class="filas-productos">
-                </div>
+        <div class="modal-container" id="modal_container">
+            <div id="modalCart" class="modal-cart">
+              <button id="close" class="btn btn-danger btn-sm">X</button>
+                    <h3 id="cartTitle">Carrito</h3>
+                <div id="cart-container"></div>
                 <div class="total">
-                    <h1 class="total-carrito">TOTAL</h1>
-                    <span class="precio-total">$0</span>
-                    <button class="comprar-btn">COMPRAR</button>
+                  <h1 class="cart-total"></h1>
                 </div>
             </div>
         </div>
-        <!-- FINAL CART MODAL -->
-
-        <!-- SECCION DE PRODUCTOS -->
-        <div class="seccion-principal">
-            <p class="parrafo-principal">"La MAGIA de crear con tus manos"</p>
-        </div>
-        <div class="items-contenedor">
-            <div class="card-1 card" id="prod1">
-                <img class="img-producto" src="./css/img/curso-bolsitas.png" alt="curso bolsitas">
-                <h3>Curso Bolsitas Sorpresa</h3>
-                <button class="agregar-carrito">Comprar</button>
-                <span class="precio-producto">$3200</span>
-            </div>
-            <div class="card-1 card" id="prod2">
-                <img class="img-producto" src="./css/img/curso-letras3d.png" alt=" curso letras 3d">
-                <h3>Curso Letras 3D</h3>
-                <button class="agregar-carrito">Comprar</button>
-                <span class="precio-producto">$3000</span>
-            </div>
-            <div class="card-1 card" id="prod3">
-                <img class="img-producto" src="./css/img/curso-pinatas.png" alt="curso pinatas">
-                <h3>Curso Pinatas</h3>
-                <button class="agregar-carrito">Comprar</button>
-                <span class="precio-producto">$3500</span>
-            </div>
-            <div class="card-1 card" id="prod4">
-                <img class="img-producto" src="./css/img/curso-tarjetas.png" alt="curso tarjetas">
-                <h3>Curso Tarjetas</h3>
-                <button class="agregar-carrito">Comprar</button>
-                <span class="precio-producto">$3900</span>
-            </div>
-            
+    
     </main>
-    <footer>
-        <div>
-            <p class="footer">Gracias por visitarnos,seguinos en redes</p>
 
-        </div>
-    </footer>
 
-     <!-- SCRIPTS -->
+   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" 
+    crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+    <script src="./js/cart.js"></script>
 
 </body>
-
 </html>
