--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" 
     crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="sweetalert2.all.min.js"></script>
+    <scriptsrc="sweetalert2.min.js"></script>
+    <linkrel="stylesheet"href="sweetalert2.min.css">
     <script src="./js/app.js"></script>
     <script src="./js/cart.js"></script>
 
