--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     </a>
                 </div>
               </li>
+              <li>
+                <button id="btn">Ver Opiniones</button>
+                <div id="opiniones"></div>
+              </li>
             </ul>
           </div>
         </div>
@@ -52,7 +56,8 @@
                 </div>
             </div>
         </div>
-    
+
+        
     </main>
 
 
