--- a/lagentedice.html
+++ b/lagentedice.html
@@ -47,8 +47,7 @@
             </figure>
           </div>
           <div class="box">
-            <h2 class="sobreMi">Sobre Mi</h2>
-            <p class="sobreMi2">Soy Jorgelina, apasionada por el diseño</p>
+            <h2 class="sobreMi">"Los sueños se hacen realidad cuando decides luchar por ellos"</h2>
           </div>
           <div class="box">
             <h1 class="sobreMi">Siguenos</h1>
